Closed Bug 1790450 Opened 3 years ago Closed 3 years ago

Titles on a particular PDF are cut off on Firefox's PDF viewer, but not in Chromes

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

VERIFIED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- disabled
firefox104 --- disabled
firefox105 --- disabled
firefox106 --- verified
firefox107 --- verified

People

(Reporter: twisniewski, Assigned: lsalzman)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: regression)

Attachments

(3 files)

The titles on the first page of the PDF are being cut off in Firefox, but not in Chrome. This issue was reported to us at webcompat.com.

I can reproduce the issue on mac OS 12.5.1, with the pref gfx.canvas.accelerated set to true, the rendering is correct when set to false.
:lsalzman, could you have a look please ?

Flags: needinfo?(lsalzman)

Calixte, I can't reproduce this locally. Can you check with mozregression to see if this was some local bug churn that caused me to break it and then possibly fix it? Does it still repro with nightly?

Flags: needinfo?(lsalzman) → needinfo?(cdenizet)

I can reproduce in nightly 20220912094615.
I tried to figure out a revision with mozregression but at some point the builds only display some black pages, hence I can't say if the text rendering is buggy or not. So in considering black pages as correct, the best range I can get is:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=82085e71004296ecde5f16d6f5463fc6224678a4&tochange=4d770d6a88770f9af267a8a34e002f955b0c37cd

Flags: needinfo?(cdenizet)

I just tested on Windows 11 and I've the same issue with gfx.canvas.accelerated set to true.

QA Whiteboard: [qa-regression-triage]

Testing with mozregression:

Last good build: 2022-03-18
First bad build: 2022-03-19
Possibly caused by Bug 1756803

I just tried again mozregression but on Windows, I still get some black pages in the pdf with some builds and in skipping them I managed to get:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=62296e2492120287ebec7164b0dc72b30ffc2abc&tochange=a70044c2c67a886eaf9589b97392e47bb366fa57

The bug is intermittent with some builds, hence I had to reload the pdf several times to be "sure" that the build was buggy.

(In reply to Calixte Denizet (:calixte) from comment #7)

I just tried again mozregression but on Windows, I still get some black pages in the pdf with some builds and in skipping them I managed to get:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=62296e2492120287ebec7164b0dc72b30ffc2abc&tochange=a70044c2c67a886eaf9589b97392e47bb366fa57

The bug is intermittent with some builds, hence I had to reload the pdf several times to be "sure" that the build was buggy.

Likely bug 1755780 then.

Component: PDF Viewer → Graphics: Canvas2D
Product: Firefox → Core
Regressed by: 1755780

Set release status flags based on info from the regressing bug 1755780

The conservative bounds returned when using SkTextBlob::bounds() can sometimes
be erroneous. Skia currently does not have a way to force tight bounds computation
with that particular interface, so we work around this by querying the bounds
from SkFont explicitly like Skia's internal tight bounds computation would do
anyway.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch

Reproduced the issue mentioned at comment 0 using Firefox 106.0a1 (BuildId:20220912214055) while having the gfx.canvas.accelerated pref set to true.

This issue is verified fixed using Firefox 106.0b4 (BuildId:20220925185751) and Firefox 107.0a1 (BuildId:20220926213808) on Windows 10 64bit, macOS 11 and Ubuntu 22.04 with gfx.canvas.accelerated pref set to true.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-regression-triage]
Flags: qe-verify+

IIUC, this only happens with the gfx.canvas.accelerated manually set to true as it's unconditionally defaulted to false outside of Nightly builds. Updating the status flags accordingly. Please feel free to holler if I got that wrong :)

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: