Bug 1790450 - Avoid using SkTextBlob bounds. r=aosmond

The conservative bounds returned when using SkTextBlob::bounds() can sometimes
be erroneous. Skia currently does not have a way to force tight bounds computation
with that particular interface, so we work around this by querying the bounds
from SkFont explicitly like Skia's internal tight bounds computation would do
anyway.

Differential Revision: https://phabricator.services.mozilla.com/D157547